2009-02-01  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox32d4.h: New file.
	* include/avr/iox16a4.h: New file.
	* include/avr/iox16d4.h: New file.

2009-02-01  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/io90pwm81.h: New file.

2009-01-29  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATA6289.
	* devtools/gen-avr-lib-tree.sh: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/Makefile.am: Same.
	* include/avr/io.h: Same.
	* include/avr/sleep.h: Same.
	* include/avr/wdt.h: Same.
	* include/avr/ioa6289.h: New file.
	* NEWS: Add news item.

2009-01-26  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATmega64M1, ATmega64C1, ATmega16M1.
	* devtools/gen-avr-lib-tree.sh: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/Makefile.am: Same.
	* include/avr/io.h: Same.
	* include/avr/power.h: Same.
	* include/avr/sleep.h: Same.
	* include/avr/wdt.h: Same.
	* NEWS: Add news items.

2009-01-26  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/io90pwm2b.h: Bit definitions OCR0_0..OCR0_7 were
		duplicated. Change to OCR0A_0..OCR0A_0 and OCR0B_0..OCR0B_7. Add
		old definitions back in for backwards compatibility.
	* include/avr/io90pwm3b.h: Same.

2009-01-26  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom64m1.h: New file.
	* include/avr/iom64c1.h: New file.
	* include/avr/iom16m1.h: New file.

2009-01-26  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom32m1.h: File has been regenerated from updated XML file.
		SPM_PAGESIZE fix, new bit definitions, new 16-bit combined registers, 
		22 renamed definitions, remove DAOE bitfield, fix bit definitions, 
		new register PCICR, renamed EEPROM bit definitions, miscellaneous 
		whitespace changes.
	* include/avr/iom32c1.h: File has been regenerated from updated XML file.